--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -48,9 +48,7 @@ steps:
   displayName: 'nuget push'
   inputs:
     command: 'push'
-    feedsToUse: 'select'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
     nuGetFeedType: 'internal'
-    publishVstsFeed: 'TestFeed'
-    versioningScheme: 'off'
+    publishVstsFeed: '4ce7540b-15e3-477c-8f75-5493c3b0b716'
     allowPackageConflicts: true
