--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,11 +44,11 @@ steps:
     ArtifactName: 'drop'
     publishLocation: 'Container'
 
-- task: NuGetCommand@2
-  displayName: 'nuget push'
-  inputs:
-    command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
-    nuGetFeedType: 'internal'
-    publishVstsFeed: '812d3f2b-a5ce-4c9f-b9bf-23f768973dfd/b3eb05a0-5c7e-41b9-af13-849cc1e8038e'
-    allowPackageConflicts: true
+# - task: NuGetCommand@2
+#   displayName: 'nuget push'
+#   inputs:
+#     command: 'push'
+#     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+#     nuGetFeedType: 'internal'
+#     publishVstsFeed: '812d3f2b-a5ce-4c9f-b9bf-23f768973dfd/b3eb05a0-5c7e-41b9-af13-849cc1e8038e'
+#     allowPackageConflicts: true
