--- a/src/BrainlessRetry/BrainlessRetry.csproj
+++ b/src/BrainlessRetry/BrainlessRetry.csproj
@@ -9,6 +9,8 @@
 	  <Description>Simple library for retry of any method.</Description>
 	  <IsPackable>true</IsPackable>
 	  <RepositoryUrl>https://github.com/hlavoj/BrainlessRetry</RepositoryUrl>
+	  <AssemblyVersion>0.1.1.0</AssemblyVersion>
+	  <FileVersion>0.1.1.0</FileVersion>
   
   </PropertyGroup>
 
