Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ steps:
   inputs:
     command: 'test'
     projects: 'src'
+    arguments: --collect "Code coverage"'
 
 - task: DotNetCoreCLI@2
   displayName: "dotnet pack"
