--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,12 @@ steps:
     projects: 'src'
     arguments: --collect:"XPlat Code Coverage"
 
+- task: PublishCodeCoverageResults@1
+  displayName: 'Publish code coverage report'
+  inputs:
+    codeCoverageTool: 'Cobertura'
+    summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
+
 - task: DotNetCoreCLI@2
   displayName: "dotnet pack"
   inputs:
