Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,7 +44,9 @@ steps:
     projects: 'src'
     arguments: --logger "trx;LogFileName=testresults.trx" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/Coverage/
 
-
+- task: CmdLine@2
+  inputs:
+    script: 'dir'
 
 - task: PublishTestResults@2
   inputs:
