--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,9 +44,12 @@ steps:
     projects: 'src'
     arguments: --logger "trx;LogFileName=testresults.trx" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/Coverage/
 
+
 - task: CmdLine@2
   inputs:
-    script: 'dir'
+    script: |
+      cd src\BrainlessRetry.Tests\TestResults\
+      dir
 
 - task: PublishTestResults@2
   inputs:
