Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,6 +61,13 @@ steps:
       dir
 
 
+- task: CmdLine@2
+  inputs:
+    script: |
+      cd $(Agent.TempDirectory)
+      dir
+
+
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'XUnit'
