--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -45,46 +45,32 @@ steps:
     arguments: --logger "trx;LogFileName=testresults.trx" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/Coverage/
 
 
-- task: CmdLine@2
-  inputs:
-    script: 'cd src\BrainlessRetry.Tests'
-
-- task: CmdLine@2
-  inputs:
-    script: 'dir'
-
-
-- task: CmdLine@2
-  inputs:
-    script: |
-      cd src\BrainlessRetry.Tests
-      dir
 
 
 - task: CmdLine@2
   inputs:
     script: |
       cd $(Agent.TempDirectory)
-      dir
+      dir /s
 
 
 - task: PublishTestResults@2
   inputs:
     testResultsFormat: 'XUnit'
-    testResultsFiles: '**/*.trx'
+    testResultsFiles: '$(Agent.TempDirectory)/*.trx'
     failTaskOnFailedTests: true
 
 - task: PublishTestResults@2
   inputs:
     testRunner: VSTest
-    testResultsFiles: '**/*.trx'
+    testResultsFiles: '$(Agent.TempDirectory)/*.trx'
     failTaskOnFailedTests: true
 
 - task: PublishCodeCoverageResults@1
   inputs:
     codeCoverageTool: 'cobertura'
-    summaryFileLocation: $(System.DefaultWorkingDirectory)/TestResults/Coverage/**/coverage.cobertura.xml
-    reportDirectory: $(System.DefaultWorkingDirectory)/TestResults/Coverage/Reports
+    summaryFileLocation: $(Agent.TempDirectory)/**/coverage.cobertura.xml
+    reportDirectory: $(Agent.TempDirectory)/TestResults/Coverage/Reports
     failIfCoverageEmpty: false 
     
 
