--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,18 +22,18 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
     projects: 'src'
 
-- task: DotNetCoreCLI@2
-  displayName: dotnet test
-  inputs:
-    command: 'test'
-    projects: 'src'
-    arguments: --collect:"XPlat Code Coverage"
+# - task: DotNetCoreCLI@2
+#   displayName: dotnet test
+#   inputs:
+#     command: 'test'
+#     projects: 'src'
+#     arguments: --collect:"XPlat Code Coverage"
 
-- task: PublishCodeCoverageResults@1
-  displayName: 'Publish code coverage report'
-  inputs:
-    codeCoverageTool: 'Cobertura'
-    summaryFileLocation: '$(Build.SourcesDirectory)/**/coverage.cobertura.xml'
+# - task: PublishCodeCoverageResults@1
+#   displayName: 'Publish code coverage report'
+#   inputs:
+#     codeCoverageTool: 'Cobertura'
+#     summaryFileLocation: '$(Agent.TempDirectory)/**/coverage.cobertura.xml'
 
 
 
@@ -52,19 +52,6 @@ steps:
     script: |
       cd $(Agent.TempDirectory)
       dir /s
-
-
-# - task: PublishTestResults@2
-#   inputs:
-#     testResultsFormat: 'XUnit'
-#     testResultsFiles: '$(Agent.TempDirectory)/*.trx'
-#     failTaskOnFailedTests: true
-
-# - task: PublishTestResults@2
-#   inputs:
-#     testRunner: VSTest
-#     testResultsFiles: '$(Agent.TempDirectory)/*.trx'
-#     failTaskOnFailedTests: true
 
 - task: PublishCodeCoverageResults@1
   inputs:
