--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,12 +22,12 @@ steps:
     arguments: '--configuration $(buildConfiguration)'
     projects: 'src'
 
-# - task: DotNetCoreCLI@2
-#   displayName: dotnet test
-#   inputs:
-#     command: 'test'
-#     projects: 'src'
-#     arguments: --collect:"XPlat Code Coverage"
+- task: DotNetCoreCLI@2
+  displayName: dotnet test
+  inputs:
+    command: 'test'
+    projects: 'src'
+    arguments: --collect:"XPlat Code Coverage"
 
 # - task: PublishCodeCoverageResults@1
 #   displayName: 'Publish code coverage report'
@@ -37,12 +37,12 @@ steps:
 
 
 
-- task: DotNetCoreCLI@2
-  displayName: dotnet test
-  inputs:
-    command: 'test'
-    projects: 'src'
-    arguments: --logger "trx;LogFileName=testresults.trx" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/Coverage/
+# - task: DotNetCoreCLI@2
+#   displayName: dotnet test
+#   inputs:
+#     command: 'test'
+#     projects: 'src'
+#     arguments: --logger "trx;LogFileName=testresults.trx" /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura /p:CoverletOutput=TestResults/Coverage/
 
 
 
