--- a/src/BrainlessRetry.Tests/BrainlessRetry.Tests.csproj
+++ b/src/BrainlessRetry.Tests/BrainlessRetry.Tests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="xunit" Version="2.4.0" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
     <PackageReference Include="coverlet.collector" Version="1.2.0" />
+    <DotNetCliToolReference Include="dotnet-reportgenerator-cli" Version="4.2.15" />
   </ItemGroup>
 
   <ItemGroup>
